src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active_UserAcct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A field updated from the user field that displays if the contact has an active user account</description>
        <inlineHelpText>This field will be ticked if the user has an active user account</inlineHelpText>
        <label>Active User Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Middle_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Note__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Profession_Role__c</fullName>
        <label>Contact Person Profession Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Preferred_Name__c</fullName>
        <description>Individual Preferred Name</description>
        <encrypted>true</encrypted>
        <inlineHelpText>Individual Preferred Name</inlineHelpText>
        <label>Individual Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <encrypted>true</encrypted>
        <label>On Behalf Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization1__c</fullName>
        <label>Organization</label>
        <picklist>
            <picklistValues>
                <fullName>CFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRACTITIONER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_Identifying_Number__c</fullName>
        <label>Professional Identifying Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Northern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraser Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vancouver Island Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vancouver Coastal Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Individual__c</fullName>
        <label>Relationship to Individual</label>
        <picklist>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLBC Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Individual_if_Other__c</fullName>
        <label>Relationship to Individual (if Other)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <encrypted>true</encrypted>
        <label>Service Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Team_Member_Role__c</fullName>
        <label>Support Team Member Role</label>
        <picklist>
            <picklistValues>
                <fullName>Support Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLBC Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Number__c</fullName>
        <encrypted>true</encrypted>
        <label>Work Phone Number</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.IS_PERSON_ACCOUNT</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Contact_Note__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>